--- a/reactprj/src/components/Login.module.css
+++ b/reactprj/src/components/Login.module.css
@@ -24,3 +24,19 @@
     font-size: 1.5em;
     color: #333;
 }
+
+.inputField {
+    width: calc(100% - 20px);
+    padding: 12px;
+    margin: 15px 0;
+    border: none;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.6); /* Lighter background */
+    color: #333; /* Darker text for better contrast */
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.inputField::placeholder {
+    color: #666;
+}
