--- a/reactprj/src/components/Login.module.css
+++ b/reactprj/src/components/Login.module.css
@@ -40,3 +40,24 @@
 .inputField::placeholder {
     color: #666;
 }
+
+
+.inputField:focus {
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    outline: none;
+}
+
+.submitButton {
+    width: 100%;
+    padding: 12px;
+    background-color: #98dcfc; /* Light blue */
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 20px;
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+    font-family: 'Arial', sans-serif;
+    font-size: 1em;
+}
