--- a/reactprj/src/components/Login.module.css
+++ b/reactprj/src/components/Login.module.css
@@ -61,3 +61,13 @@
     font-family: 'Arial', sans-serif;
     font-size: 1em;
 }
+
+.submitButton:hover {
+    background-color: #4fc3f7; /* Darker shade of light blue */
+    transform: translateY(-3px);
+}
+
+.errorMessage {
+    color: red;
+    margin-top: 10px;
+}
